first basic enemy -- spinners

--- a/src/style.styl
+++ b/src/style.styl
@@ -1,5 +1,7 @@
 
 body
+  color white
+  font-family sans-serif
   -webkit-user-select none
   margin 0px
 
@@ -9,3 +11,9 @@ canvas
   image-rendering -webkit-optimize-contrast
   image-rendering optimize-contrast
   -ms-interpolation-mode nearest-neighbor
+
+.directions
+  width 100%
+  text-align center
+  position absolute
+  top 15pt
